--- a/5-guia/ejercicios-5/ej-3-5.tex
+++ b/5-guia/ejercicios-5/ej-3-5.tex
@@ -5,14 +5,29 @@
 \end{enunciado}
 
 Armo diofántica con enunciado, tengo en cuenta que
-$A \geq 0 \ytext B \geq 0$, dado que son productos {\color{pink}{\faIcon{brain}}}.
+$A \geq 0 \ytext B \geq 0$, dado que son productos físicos {\color{pink}{\faIcon{brain}}}.
+
+La ecuación \textit{presupuestaria} queda:
 $$
-  \llave{c}{
-    39A + 28B = 135\\
-    \Sii{coprimizar}[$(A:B) = 3$]\\
-    13\blue{A} + 16\green{B} = 45,\,\\
-    \text{tiene solución, ya que $\ub{(13:16)}{ = 1} \divideA 45$}\\
-    \flecha{sale a ojo}\\
-    \boxed{(\blue{A},\green{B}) = (\blue{1},\green{2})}
+  39A + 28B = 135
+$$
+Siempre que puedo coprimizar lo hago:
+$$
+  (A:B) = 3
+  \entonces
+  13 \blue{A} + 16\green{B} = 45,
+$$
+Veo que hay solución dado que,
+$$
+  (13:16) \divideA 45
+$$
+Resuelvo a ojo. Si no lo ves hacé Euclides combinación entera y zarasa:
+$$
+  \cajaResultado{
+    (\blue{A},\green{B}) = (\blue{1},\green{2})
   }
 $$
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz}
+\end{aportes}
