remaster extras guia 5

--- a/5-guia/ejercicios-5-extra/ej-extra-5-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-5-5.tex
@@ -106,5 +106,5 @@ $$
   \cajaResultado{r_{156}(n) = 93}
 $$
 \begin{aportes}
-  \item \aporte{\dirRepo}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
 \end{aportes}
