--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -21,6 +21,7 @@
 \def\o{\lor}
 \def\neg{\sim}
 
+\DeclareMathOperator{\equivalente}{\leftrightsquigarrow}
 \def\entonces{\Rightarrow}
 \def\noEntonces{\centernot\Rightarrow}
 
