--- a/5-guia/ejercicios-5-extra/ej-extra-3-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-3-5.tex
@@ -1,3 +1,8 @@
+%Macro
+%================
+\def\expresion{n^{433} + 7n + 91 \xspace}
+%================
+
 \begin{enunciado}{\ejExtra}
   Determinar todos los $n \en \enteros$ tales que
   $$
@@ -5,9 +10,6 @@
   $$
   Expresar las soluciones mediante una única ecuación.
 \end{enunciado}
-
-%Macro
-\def\expresion{n^{433} + 7n + 91}
 
 Para que se cumpla que
 $(n^{433} + 7n + 91 : \ub{931}{7^2\cdot 19}) = \ub{133}{7\cdot 19}$
@@ -38,15 +40,13 @@ $$
   \congruencia{n^{433}}{0}{7}
   \sii
   \llave{l}{
-    \flecha{7 es primo}[$\noCongruencia{n}{0}{7}$]
-    \congruencia{n^{433}}{0}{7}
-    \Sii{\href{\chinito}{THC}}
-    \congruencia{n}{0}{7} \to \skull \\
-    % --
-    \flecha{7 es primo}[$\congruencia{n}{0}{7}$]
+          \Sii{$\congruencia{n}{0}{7}$}
     \congruencia{0}{0}{7}
     \entonces
-    \boxed{\congruencia{n}{0}{7} }\Tilde\llamada1
+    \boxed{\congruencia{n}{0}{7} }\Tilde\llamada1\\
+    % --
+    \Sii{PTF, 7 es primo}[$\noCongruencia{n}{0}{7}$]
+    \congruencia{n}{0}{7} \to \text{incompatible } \red{\skull}
   }
 $$
 
@@ -55,52 +55,57 @@ $$
   7 \divideA \expresion \sii \congruencia{n}{0}{7}
 $$
 
-\textit{Estudio la divisibilidad $7^2 = 49$: }\\
-Si
-$
+\textit{Estudio la divisibilidad $7^2 = 49$: }
+
+Si,
+$$
   7^2 \noDivide \expresion
-  \sisolosi
+  \Sii{def}
   \noCongruencia{\expresion}{0}{49}
   \sisolosi
-  \noCongruencia{n^{433}+ 7n + 42}{0}{49}\\
-  \flecha{de $\llamada1$ tengo que}[$\congruencia{n}{0}{7} \sii n = \blue{7k}$]
+  \noCongruencia{n^{433}+ 7n + 42}{0}{49},
+$$
+de $\llamada1$ tengo que $\congruencia{n}{0}{7} \Sii{def} n = \blue{7k}$, por lo tanto:
+$$
   \noCongruencia{(\blue{7k})^{433} + 7\cdot\blue{7k} + 42}{0}{49}
   \sii
   \noCongruencia{7 \cdot (49)^{216}\cdot k^{433} + 49k + 42}{0}{49}
   \sii
   \noCongruencia{42}{0}{49}
-$\\
+$$
+
 \textit{Conclusión divisibilidad $49$:}
-$$49 \noDivide \expresion\  \paratodo n \en \enteros$$\\
+$$
+  49 \noDivide \expresion  \paratodo n \en \enteros
+$$
 
 \textit{Estudio la divisibilidad $19$: }
 
 Si
-$
+$$
   19 \divideA \expresion
   \sisolosi
   \congruencia{\expresion}{0}{19}
   \sisolosi
   \congruencia{n^{433} + 7n +15}{0}{19}
-  \flecha{analizo casos}[$19 \divideA n$ o $19 \noDivide n$]\\
+$$
+Analizo esa expresión en los casos cuando $19 \divideA n$ y cuando $19 \noDivide n$ o lo que es lo mismo cuando
+$\congruencia{n}{0}{19}$ y cuando $\noCongruencia{n}{0}{19}$:
+$$
   \congruencia{n^{433}+ 7n +15}{0}{19}
   \sii
   \llave{l}{
-    \text{(\magenta{rama  $19\noDivide n$})\ }
-    \flecha{19 es primo}[$19\noDivide n$]
-    \congruencia{(\ob{n^{18}}{\conga{19} 1})^{24}\cdot n + 7n + 15}{0}{19}
-    \sii
+          \Sii{$\congruencia{n}{0}{19}$}
+    \congruencia{15}{0}{19} \to \text{ningún } n\\
+    % --
+    \Sii{PTF, 19 es primo}[$\noCongruencia{n}{0}{19}$]
     \congruencia{8n}{4}{19}
-    \sii                                          \\
     \Sii{$\red{(\Leftarrow)}$}[$7 \cop 19$]
     \congruencia{56n}{28}{19}
     \sii
-    \boxed{\congruencia{n}{10}{19}}\Tilde\llamada2 \\
-    % --
-    \text{(\magenta{rama  $19\divideA n$})\ }
-    \flecha{19 es primo}[$19 \divideA n$]
-    \congruencia{15}{0}{19} \to \text{ningún } n
-  }$\\
+    \boxed{\congruencia{n}{10}{19}}\Tilde\llamada2
+  }
+$$
 
 \textit{Conclusión divisibilidad $19$:}
 $$19 \divideA \expresion \sii \congruencia{n}{10}{19}$$
@@ -110,7 +115,7 @@ $$
     \llamada1\congruencia{n}{0}{7} \\
     \llamada2\congruencia{n}{10}{19}
   }
-  \flecha{$7 \cop 19$ hay solución por}[\href{\chinito}{T chino R}]
+  \flecha{$7 \cop 19$ hay solución}[por \href{\chinito}{T chino R}]
   \llave{l}{
     \flecha{$\llamada2$}[en $\llamada1$]
     n = 19\blue{k} + 10 \conga7 5\blue{k} + 3 \conga7 0
