--- a/5-guia/ejercicios-5-extra/ej-extra-4-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-4-5.tex
@@ -1,93 +1,106 @@
 \begin{enunciado}{\ejExtra}
-Determinar para cada $n \en \naturales$ el resto de dividir a $8^{3^n-2}$ por 20.
+  Determinar para cada $n \en \naturales$ el resto de dividir a $8^{3^n-2}$ por 20.
 \end{enunciado}
 
-Quiero encontrar $r_{20}(8^{3^n-2})$ entonces analizo congruecia:\\
-$
-	\congruencia{8^{3^n-2}}{X}{20}
-	\flecha{quebrar}
-	\llave{l}{
-		\congruencia{8^{3^n-2}}{3^{3^n-2}}{5} \llamada1 \\
-		\congruencia{8^{3^n-2}}{0}{4} \to \paratodo n \en \naturales
-	}\\
-$
+Quiero encontrar $r_{20}(8^{3^n-2})$ entonces analizo congruencia:
+$$
+  \congruencia{8^{3^n-2}}{X}{20}
+  \equivalente
+  \llave{l}{
+    \congruencia{8^{3^n-2}}{3^{3^n-2}}{5} \llamada1 \\
+    \congruencia{8^{3^n-2}}{0}{4} \to \paratodo n \en \naturales
+  }
+$$
 
-Laburo con $\llamada1$:\\
+Laburo con $\llamada1$, 5 es primo y $5 \noDivide 3$, puedo usar PTF:
+$$
+  \congruencia{8^{3^n-2}}{ 3^{3^n-2} \congruente 3^{r_4(3^n-2)}  }{5} \\
+$$
+A ver esta última expresión:
+$$
+  3^{r_4(3^n-2)}
+  \to
+  \begin{array}{|c|l|l|l|l|}
+    \hline
+    r_4(n)   & 0        & 1          & 2        & 3          \\ \hline
+    r_4(3^n) & \blue{1} & \purple{3} & \blue{1} & \purple{3} \\ \hline
+  \end{array}
+  \flecha{$n$ par}[$n$ impar]
+  \llave{rl}{
+    \text{si $n$ par}   & 3^{r_4(3^n-2)} \conga5 3^{\blue{1} - 2} \conga5 \congruencia{3^3}{2}{5} \\
+    \\
+    \text{si $n$ impar} & 3^{r_4(3^n-2)} \conga5 3^{\purple{3} - 2} \conga5 3 \ (5)
+  }
+$$
+Voy sacando los siguientes resultados para la expresión del enunciado, formando dos sistemas de ecuaciones de congruencias:
+$$
+  \llamada3
+  \llave{ll}{
+    \congruencia{8^{3^n-2}}{0}{4} & \paratodo n \en \naturales              \\
+    \congruencia{8^{3^n-2}}{2}{5} & \paratodo n \en \naturales  \text{ par}
+  }
+  \quad \ytext \quad
+  \llamada4
+  \llave{ll}{
+    \congruencia{8^{3^n-2}}{0}{4} & \paratodo n \en \naturales               \\
+    \congruencia{8^{3^n-2}}{3}{5} & \paratodo n \en \naturales \text{ impar}
+  }
+$$
+Lo que resta por hacer es resolver los sistemas. Empiezo por el sistema con $n$ par $\llamada3$:
+$$
+  \congruencia{n}{0}{2}
+  \entonces
+  \llave{l}{
+    8^{3^n-2} = 4j
+    \to
+    \congruencia{4j}{2}{5}
+    \sii
+    \congruencia{j}{3}{5} \\
+    \sii
+    j = 5k + 3
+    \entonces
+    8^{3^n-2} = 4(5k+3)
+    \sii
+    \cajaResultado{
+      \congruencia{8^{3^n-2}}{12}{20}
+      \sii
+      \congruencia{n}{0}{2}
+    }.
+  }
+$$
+Ahora el sistema con $n$ impar $\llamada4$:
+$$
+  \congruencia{n}{1}{2}
+  \llave{l}{
+    8^{3^n-2} = 4j
+    \to
+    \congruencia{4j}{3}{5}
+    \sii
+    \congruencia{j}{2}{5} \\
+    \sii
+    j = 5k + 2
+    \entonces
+    8^{3^n-2} = 4(5k+2)
+    \sii
+    \cajaResultado{
+      \congruencia{8^{3^n-2}}{8}{20}
+      \sii
+      \congruencia{n}{1}{2}
+    }.
+  }
+$$
 
-$
-	\congruencia{8^{3^n-2}}{ \ub{3^{3^n-2}}{    \conga5 3^{r_4(3^n-2)}\llamada2    } }{5} \\
-	\flecha{$\llamada2$}
-	3^{r_4(3^n-2)}
-	\flecha{$n$ par}[$n$ impar]
-	\llave{rl}{
-      \text{si $n$ par}   & 3^{r_4(3^n-2)} \underset{\llamada3}{\conga5} 3^{1-2} \conga5 \congruencia{3^3}{2}{5} \\
-		\text{si $n$ impar} & 3^1 \conga5 3 \ (5)
-	}
-	\quad
-	\begin{array}{|c|l|l|l|l|}
-		\hline
-		r_4(n)   & 0 & 1 & 2 & 3 \\ \hline
-		r_4(3^n) & 1 & 3 & 1 & 3 \\ \hline
-	\end{array} \llamada3
-$\\
+Se concluye que:
+$$
+  \cajaResultado{
+    r_{20}(8^{3^n-2}) = 12
+    \paratodo n \en \naturales \text{ par }
+    \ytext
+    r_{20}(8^{3^n-2}) = 8
+    \paratodo n \en \naturales \text{ impar }
+  }
+$$
 
-$
-	\llave{lll}{
-		\congruencia{8^{3^n-2}}{0}{4}\llamada4 & \text{ si } & \paratodo n \en naturales\\
-		\congruencia{8^{3^n-2}}{2}{5}\llamada5 & \text{ si } & \congruencia{n}{0}{2} \\
-		\congruencia{8^{3^n-2}}{3}{5}\llamada6 & \text{ si } & \congruencia{n}{1}{2}
-	}\\
-$
-
-Si $
-	\congruencia{n}{0}{2}
-	\flecha{$\llamada4$}[$\llamada5$]
-	\llave{l}{
-		8^{3^n-2} = 4j
-		\to
-		\congruencia{4j}{2}{5}
-		\sii
-		\congruencia{j}{3}{5}\\
-		\sii
-		j = 5k + 3
-		\entonces
-		8^{3^n-2} = 4(5k+3)
-		\sii
-		\boxed{
-			\congruencia{8^{3^n-2}}{12}{20}
-			\sii
-			\congruencia{n}{0}{2}.
-		} \Tilde
-	}
-$
-
-Si $
-	\congruencia{n}{1}{2}
-	\flecha{$\llamada4$}[$\llamada6$]
-	\llave{l}{
-		8^{3^n-2} = 4j
-		\to
-		\congruencia{4j}{3}{5}
-		\sii
-		\congruencia{j}{2}{5}\\
-		\sii
-		j = 5k + 2
-		\entonces
-		8^{3^n-2} = 4(5k+2)
-		\sii
-		\boxed{
-			\congruencia{8^{3^n-2}}{8}{20}
-			\sii
-			\congruencia{n}{1}{2}.
-		} \Tilde
-	}
-$\\
-
-Se concluye que
-\boxed{
-	r_{20}(8^{3^n-2}) = 12
-	\text{ si } n \text{ par y }
-	r_{20}(8^{3^n-2}) = 8
-	\text{ si } n \text{ impar  con }
-	n \en \naturales
-}
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
