--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -131,7 +131,7 @@
   \or
     \def\colortemp{Purple}
   \fi
-  \textcolor{\colortemp}{\text{{\tiny \FiveStar}}^{\scriptscriptstyle#1}}
+  \textcolor{\colortemp}{\text{{\tiny \faIcon{star}}}^{\scriptscriptstyle#1}}
   \endgroup
 }
 
