--- a/macros/encabezado-pie.tex
+++ b/macros/encabezado-pie.tex
@@ -18,7 +18,7 @@
 
 \fancyfoot[EL]{
   \href{\dirRepo}{\small\github
-    ¡Aportá con correcciones, subiendo ejercicios, \yellow{\FiveStar} al repo, críticas, todo sirve.
+    ¡Aportá con correcciones, subiendo ejercicios, \yellow{\faIcon{star}} al repo, críticas, todo sirve.
     }
 }    % pie izquierdo pares
 \fancyfoot[OL]{
