add ej parcial guia 1 y guia 2

--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -22,7 +22,7 @@
 \def\neg{\sim}
 
 \DeclareMathOperator{\equivalente}{\leftrightsquigarrow}
-\def\entonces{\Rightarrow}
+\def\entonces{\implies}
 \def\noEntonces{\centernot\Rightarrow}
 
 \def\sisolosi{\iff} % largo
